# meshpy

./: .bzrignore  .editorconfig  .gitattributes  .gitignore  .gitlab-ci.yml  .gitmodules  CITATION.cff  CMakeLists.txt  LICENSE  MANIFEST.in  Makefile.in  README  README.rst  aksetup_helper.py  azure-pipelines.yml  configure  configvars.py  meson.build  pyproject.toml  setup.cfg  setup.py  siteconf.py.in
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml
.github/workflows/: ci.yml  deploy.yml  wheel.yml  wheels.yml
contrib/extract-gmsh-node-order/: cube.geo  extract-node-order.py
doc/: Makefile  conf.py  faq.rst  geometry.rst  gmsh.rst  index.rst  installation.rst  reference.rst  tri-tet.rst  upload-docs.sh
examples/: MESH_README.txt  airfoil3d.py  box-in-box.py  demo.py  jw_mesh_examples.ipynb  jw_mesh_examples.py  jw_meshtools.py  mesh_ply.py  nico_mesh.py  test_ball.py  test_cylinder.py  test_gmsh_reader.py  test_insert_points.py  test_tet_torus.py  test_tetgen.py  test_tetgen_2.py  test_tri_pml.py  test_tri_quadratic.py  test_tri_simple_square.py  test_triangle.py  test_triangle_refine.py  test_triangle_with_specified_points.py  tet-size-control.py  tri-boundary-markers.py  tri-refinement-spec.py  write_dolfin.py
meshpy/: __init__.py  common.py  geometry.py  gmsh.py  gmsh_reader.py  naca.py  nacamesh.py  ply.py  tet.py  tools.py  triangle.py
patches/: mk-patch  tetgen-1.4.2.patch  tetgen-1.4.3.patch
src/: foreign_array.hpp  foreign_array_wrap.hpp  predicates.cpp  tetgen.cpp  tetgen.h  triangle.c  triangle.h  wrap_tetgen.cpp  wrap_triangle.cpp
src/cpp/: foreign_array.hpp  foreign_array_wrap.hpp  predicates.cpp  tetgen.cpp  tetgen.h  triangle.c  triangle.cpp  wrap_tetgen.cpp  wrap_triangle.cpp  wrapper.cpp
src/python/: common.py  geometry.py  tet.py  triangle.py
test/: MESH_README.txt  airfoil3d.py  box-in-box.py  clean.sh  demo.py  gun.am  ka-6d.ply  mesh_ply.py  naca-mesh.py  naca23015-points.txt  naca_generator.py  nico_mesh.py  ply.py  test_ball.py  test_cylinder.py  test_gmsh_reader.py  test_gmsh_reader_hedge.py  test_meshpy.py  test_tet_torus.py  test_tetgen.py  test_tetgen_2.py  test_tri_pml.py  test_tri_quadratic.py  test_tri_simple_square.py  test_triangle.py  test_triangle_refine.py  tet-size-control.py
